manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-app-web-ingress
  labels:
    name: ingress-lb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  #ingressClassName: nginx
  rules:
    - host: budget-app.example.com # Replace with your actual hostname
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: budget-app-web-service
                port:
                  # number: 80
                  number: 3000
